# lpc5500

./: .gitignore  Cargo.toml  build.rs  build_.rs  link.x
.cargo/: config.toml
.linker/: main.ld  mainv1.ld
.linker/flash/: asserts.ld  sections.ld
.linker/flash/memory/: 256.ld  512.ld  640.ld
.linker/main/: asserts.ld  empty.ld  memory.ld  sections.ld
.linker/misc/: asserts.ld  sections.ld
.linker/ram/: asserts.ld  sections.ld
.linker/ram/memory/: 144.ld  256.ld  320.ld
.linker/sub/: asserts.ld  memory.ld  sections.ld
examples/: default.rs
src/: critical.rs  defmt.rs  lib.rs  macros.rs  peripherals.rs
src/adc/: mod.rs  trigger.rs
src/adc/channel/: advanced.rs  basic.rs  mod.rs
src/adc/command/: iterations.rs  mod.rs
src/adc/command/conversion/: average.rs  ctype.rs  mod.rs  resolution.rs  sampletime.rs
src/adc/common/: average.rs  compare.rs  mod.rs  mode.rs  precision.rs  resolution.rs  time.rs
src/adc/trigger/: mod.rs
src/asm/: coprocessor.rs  interrupt.rs  mod.rs  stack.rs
src/boot/: mod.rs  vectortable.rs
src/dma/: descriptor_.rs  dma0.rs  mod.rs
src/dma/channel/: config.rs  mod.rs
src/dma/common/: width.rs
src/dma/descriptor/: list.rs  mod.rs
src/dma/endpoint/: address.rs
src/dma/transfer/: mod.rs
src/dma_/: dma1.rs  error.rs
src/dma_/channel/: mod.rs
src/dma_/common/: increment.rs  mod.rs
src/dma_/descriptor/: handle.rs  list.rs  mod.rs
src/dma_/endpoint/: buffer.rs  mod.rs
src/dma_/transfer/: b2b.rs
src/gpio/: common.rs  gpio.rs  iocon.rs  mod.rs  pin.rs  rawio.rs
src/interrupts/: interrupts.rs  mod.rs
src/interrupts/exceptions/: bus.rs  debug.rs  hardfault.rs  mem.rs  mod.rs  nmi.rs  pendsv.rs  systick.rs  usage.rs
src/powerquad/: mod.rs  sleep.rs
src/powerquad/coprocessor/: asm.rs  engine.rs  function.rs  mod.rs  traits.rs
src/powerquad/engine/: error.rs  mod.rs
src/powerquad/engine/handler/: container.rs  mod.rs
src/powerquad/engine/matrix/: format.rs  mod.rs  ops.rs  row.rs  typed.rs
src/security/: mod.rs  random.rs
src/system/: enable.rs  mod.rs  pdrun.rs  reset.rs
src/system/clocks/: main.rs  main_.rs  mod.rs
src/system/clocks/fro/: fro192m.rs  fro1m.rs  fro32k.rs  impls.rs  mod.rs  traits.rs
src/system/clocks/main_/: mod.rs  selector.rs
src/system/clocks_/: mod.rs
src/system/clocks_/fro/: impls.rs  info.rs  mod.rs  traits.rs
src/system/clocks_/main/: control.rs  maina.rs  mainb.rs  mod.rs
src/system/clocks_/osc/: mod.rs
src/system/clocks_/osc/fro/: fro12m.rs  fro1m.rs  fro32k.rs  fro48m.rs  fro96m.rs  mod.rs
src/system/flash/: mod.rs
src/system/power/: bod.rs  mod.rs  process.rs  profile.rs  voltages.rs
src/system/user/: flash.rs  main.rs  mod.rs
src/timers/: mod.rs
src/timers/ostimer/: mod.rs  reader.rs
src/timers/utick/: handler.rs  mod.rs
src/vtable/: mod.rs  table.rs  vector.rs
src/vtable/exceptions/: hardfault.rs  main.rs  mod.rs  secure.rs  svcall.rs  systick.rs
src/vtable/global/: main.rs  mod.rs  reset.rs  runtime.rs
src/vtable/interrupts/: main.rs  mod.rs  sub.rs
