[package]
name = "lpc5500"
version = "0.1.0"
edition = "2021"



[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.release]
panic = "abort"
lto = true
debug = true
opt-level = "z"



[dependencies]

#[dependencies.critical-section]
#version = "1"

[dependencies.defmt]
version = "0.3"

#[dependencies.micro]
#git = "https://github.com/micro-rust/micro.git"
#features = ["arm"]



#[build-dependencies]
#cc = "1.0"


[features]

# External oscillators

## General external oscillators flag
xosc = []

## High speed external oscillator flag
xosc-hs = ["xosc"]

## Low speed external oscillator flag
xosc-ls = ["xosc"]
