[package]
name = "lpc5500"
version = "0.1.0"
edition = "2021"



[profile.dev]
panic = "abort"
lto = true
debug = true
opt-level = "z"

[profile.release]
panic = "abort"
lto = true
debug = true
opt-level = "z"



[dependencies]

#[dependencies.critical-section]
#version = "1"

[dependencies.defmt]
version = "0.3"
optional = true



[features]

# Enables DEFMT logging.
defmt = ["dep:defmt"]


# Flash configurations.

flash-640 = []
flash-512 = []
flash-256 = []



# SRAM configurations.

sram-320 = []
sram-256 = []
sram-144 = []



# Optional secondary core.
dual-core = []

# Optional security and coprocessor peripherals.

casper    = []
hash-aes  = []
powerquad = []
prince    = []
puf       = []
trustzone = []

# Optional peripherals variants.
V01 = ["casper", "dual-core", "hash-aes", "powerquad", "prince", "puf", "trustzone"]
V02 = ["casper", "hash-aes", "prince", "puf"]



# LPC55S69 variants

lpc55s69jbd100 = ["flash-640", "sram-320", "V01"]
lpc55s69jev98  = ["flash-640", "sram-320", "V01"]
lpc55s69jbd64  = ["flash-640", "sram-320", "V01"]

# LPC55S69 variants

lpc55s66jbd100 = ["flash-256", "sram-144", "V01"]
lpc55s66jev98  = ["flash-256", "sram-144", "V01"]
lpc55s66jbd64  = ["flash-256", "sram-144", "V01"]

# LPC55S28 variants

lpc55s28jdb100 = ["flash-512", "sram-256", "V02"]
lpc55s28jev98  = ["flash-512", "sram-256", "V02"]
lpc55s28jdb64  = ["flash-512", "sram-256", "V02"]

# LPC55S26 variants

lpc55s26jdb100 = ["flash-256", "sram-144", "V02"]
lpc55s26jev98  = ["flash-256", "sram-144", "V02"]
lpc55s26jdb64  = ["flash-256", "sram-144", "V02"]

# LPC5528 variants

lpc5528jdb100 = ["flash-512", "sram-256"]
lpc5528jev98  = ["flash-512", "sram-256"]
lpc5528jdb64  = ["flash-512", "sram-256"]

# LPC5526 variants

lpc5526jdb100 = ["flash-256", "sram-144"]
lpc5526jev98  = ["flash-256", "sram-144"]
lpc5526jdb64  = ["flash-256", "sram-144"]
